<resources>
    <string name="app_name">Fast.lk_redesign_app</string>
    <string name="name">Name*</string>
    <string name="email">Email*</string>
    <string name="phone">Contact No*</string>
    <string name="password">Password*</string>
    <string name="confirm_password">Confirm Password*</string>
    <string name="signup">Sign Up</string>
    <string name="signin">Sign In</string>
    <string name="name_err">Enter a valid name</string>
    <string name="email_err">Enter a valid email</string>
    <string name="phone_err">Enter a valid contact number</string>
    <string name="pwd_err">The password should contain at least 8 characters, including at least one lower case letter, one upper case letter, one number and one punctuation mark</string>
    <string name="con_pwd_err">Password does not match</string>
    <string name="create_new_pwd">Create a new password</string>
    <string name="new_pwd_info">Enter the email address you used when you created the ad or account. You will receive an email with the information you need to change your password.</string>
    <string name="reset_pwd">Reset Password</string>
    <string name="incorrect_email_err">Enter the email address you used when you created the ad or account</string>
    <string name="sell">Sell an item or service</string>
    <string name="add_photos">Add photos (limited to 5)</string>
    <string name="add">+</string>
    <string name="condition">Condition</string>
    <string name="trim">Trim (optional)</string>
    <string name="model_yr">Model Year*</string>
    <string name="used">Used</string>
    <string name="new_">New</string>
    <string name="reconditioned">Reconditioned</string>
    <string name="post_ad">Post Ad</string>
    <string name="mileage">Mileage (km)*</string>
    <string name="engine_cap">Engine Cap (cc)*</string>
    <string name="des">Description*</string>
    <string name="negotiable">Negotiable</string>
    <string name="price">Price (Rs)*</string>
    <string name="name_req_err">Name is required</string>
    <string name="email_req_err">Email is required</string>
    <string name="phone_req_err">Contact no is required</string>
    <string name="pwd_req_err">Password is required</string>
    <string name="model_yr_error">Model year is invalid</string>
    <string name="mileage_err">Mileage is invalid</string>
    <string name="landsize_error">Land Size Is Required</string>
    <string name="name_error">Name Is Required</string>
    <string name="email_error">Email Is Required</string>
    <string name="location_error">Location Is Required</string>
    <string name="sublocation_error">Location Is Required</string>
    <string name="currentpw_error">Current Password Is Required</string>
    <string name="newpw_error">New Password Is Required</string>
    <string name="confirmnewpw_error">New Password Is Required</string>
    <string name="title_error">Title Is Required</string>
    <string name="description_error">Description Is Required</string>
    <string name="price_error">Price Is Required</string>
    <string name="eng_cap_err">Engine capacity is invalid</string>
    <string name="price_err">Price is invalid</string>
    <string name="des_err">Description is required</string>
    <string name="title_req_err">Title is required</string>
    <string name="location_req_err">Location is required</string>
    <string name="cat_sel">Choose Category</string>
    <string name="sub_cat">Choose Subcategory</string>
    <string name="loc_sel">Choose Location</string>
    <string name="sub_loc">Choose Sub location</string>
    <string name="con">Continue</string>
    <string name="cat">Category</string>
    <string name="loc">Location</string>
    <string name="ok">OK</string>
    <string name="fuel_ty">Fuel Type</string>
    <string name="fuel_ty_sel">Select Fuel Type(s)</string>
    <string name="fuel_ty_err">Fuel type(s) is invalid</string>
    <string name="forgot_pw">Forgot Password?</string>
    <string name="sign_up_msg">Don\'t have an account yet?</string>
    <string name="sign_up_now">Sign up!</string>
    <string name="look_for_property_to_rent_title">Look for property to rent:</string>
    <string name="SellProperty">Offer A Property For Rent</string>
    <string name="sub_cat_sel">Choose Sub Category</string>
    <string name="sub_loc_sel">Choose Sub Location</string>
    <string name="offerpfrtitle">Offer A Property For Rent</string>
    <string name="addimage">Add Images (Limited To 5)</string>
    <string name="landtype">Land Type</string>
    <string name="browseimage">Browse Images</string>
    <string name="agriculture">Agriculture</string>
    <string name="commercial">Commercial</string>
    <string name="residential">Residential</string>
    <string name="other">Other</string>
    <string name="landsize">Land Size</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="pricestring">Price</string>
    <string name="postad">Post Ad</string>
    <string name="myaccount">My Account</string>
    <string name="myads">My Ads</string>
    <string name="settings">Settings</string>
    <string name="namej">Name</string>
    <string name="emailj">Email</string>
    <string name="location">Location</string>
    <string name="sublocation">Sublocation</string>
    <string name="updatepassword">Update Password</string>
    <string name="currentpassword">Current Password</string>
    <string name="newpassword">New Password</string>
    <string name="confirmnewpw">Confirm New Password</string>
    <string name="updatedetails">Update Details</string>
    <string name="changepassword">Change Password</string>
    <string name="emailuser">jrushantha@gmail.com</string>
    <string name="username">Janith Perera</string>
    <string name="myac">My Account</string>
    <string name="house_sale">House for sale</string>
    <string name="pl_con">Please Contact Us</string>
    <string-array name="trans">
        <item>Manual</item>
        <item>Automatic</item>
        <item>Tiptronic</item>
        <item>Other transmission</item>
    </string-array>
    <string-array name="fuel_ty">
        <item>Diesel</item>
        <item>Petrol</item>
        <item>CNG</item>
        <item>Hybrid</item>
        <item>Electric</item>
        <item>Other fuel type</item>
    </string-array>
    <string-array name="brands">
        <item>Toyota</item>
        <item>BMW</item>
        <item>Suzuki</item>
        <item>Nissan</item>
        <item>Hyhundai</item>
        <item>Honda</item>
        <item>Other brand</item>
    </string-array>
    <string-array name="toyota_models">
        <item>Allion</item>
        <item>Aqua</item>
        <item>Corolla</item>
        <item>Axio</item>
        <item>CHR</item>
        <item>Premio</item>
        <item>Other model</item>
    </string-array>
    <string-array name="bmw_models">
        <item>120d</item>
        <item>120i</item>
        <item>X1</item>
        <item>X3</item>
        <item>X5</item>
        <item>i3</item>
        <item>i8</item>
        <item>Other model</item>
    </string-array>
    <string-array name="categories">
        <item>Property</item>
        <item>Vehicle</item>
        <item>Electronic</item>
        <item>Animals</item>
    </string-array>
    <string-array name="vehicles">
        <item>Cars</item>
        <item>Motorbikes &amp; Scooters</item>
        <item>Three Wheelers</item>
        <item>Push Cycles</item>
        <item>Vans, Buses &amp; Lorries</item>
    </string-array>
    <string-array name="electronics">
        <item>phones</item>
        <item>Laptops</item>
        <item>Cameras</item>
        <item>TVs</item>
        <item>Audio/mp3</item>
    </string-array>
    <string-array name="properties">
        <item>Houses</item>
        <item>Land</item>
        <item>Apartments</item>
    </string-array>
    <string-array name="locations">
        <item>Colombo</item>
        <item>Matara</item>
        <item>Gampaha</item>
        <item>Galle</item>
        <item>Kalutara</item>
        <item>Badulla</item>
    </string-array>
    <string-array name="colombo">
        <item>Piliyandala</item>
        <item>Maharagama</item>
        <item>Moratuwa</item>
        <item>Malabe</item>
        <item>Kottawa</item>
        <item>Colombo 10</item>
    </string-array>
    <string-array name="matara">
        <item>Weligama</item>
        <item>Godagama</item>
        <item>Hakmana</item>
        <item>Akurassa</item>
        <item>Yatiyana</item>
    </string-array>
    <string-array name="pets">
        <item>Dogs</item>
        <item>Cats</item>
        <item>Birds</item>
        <item>Rabbits</item>
    </string-array>
    <string-array name="carlist">
        <item>Cars</item>
        <item>Motorbikes</item>
        <item>Vans</item>
        <item>Three wheelers</item>
        <item>Buses</item>
    </string-array>
    <string-array name="animals">
        <item>Related Details</item>
        <item>Food</item>
        <item>Veterinary</item>
        <item>Accessories</item>
    </string-array>
    <string-array name="vehisub">
        <item>All Vehicles</item>
        <item>Auto Services</item>
        <item>Auto Part and Accessories</item>
    </string-array>
    <string-array name="categoriesone">
        <item>Vehicle</item>
        <item>Electronic</item>
        <item>Animals</item>
    </string-array>
    <string-array name="categoryopfr">
        <item>Land</item>
        <item>Houses</item>
        <item>Apartments</item>
        <item>Commercial Properties</item>
        <item>Rooms and Annexes</item>
        <item>Holiday and Short Term Rentals</item>
    </string-array>
    <string-array name="landtypes">
        <item>Unit</item>
        <item>Acres</item>
        <item>Perches</item>
    </string-array>
</resources>